# backEnd-coreDjango

./: .gitignore  .pdm-python  README.md  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
assistance/: admin.py  models.py  serializers.py  views.py
assistance/migrations/: 0001_initial.py  0002_alter_equipment_options_alter_piece_options_and_more.py  0002_service.py  0003_assistance_alter_equipment_options_checkout_and_more.py  0004_alter_checkout_assistances_alter_checkout_equipments_and_more.py  0005_alter_assistance_type.py  0006_checkout_status.py  0007_equipment_description_alter_equipment_model_and_more.py  0008_alter_equipment_brand_alter_equipment_model.py  0009_delete_service.py  0010_equipment_image.py  0011_piece_image_product_image.py  0012_remove_equipment_image_equipment_imagem.py  0013_rename_imagem_equipment_image.py  0014_alter_equipment_brand.py  0015_alter_equipment_image.py  0016_alter_equipment_last_maintenance_date_and_more.py  0017_alter_equipment_status.py  0018_alter_equipment_brand_alter_equipment_location_and_more.py  0019_alter_equipment_location.py  0020_remove_equipment_location.py  0021_remove_equipment_last_maintenance_date_and_more.py  0022_delete_checkout.py  0023_rename_product_item_alter_item_options_delete_piece.py  0024_cart_cartitem.py  0025_remove_cart_created_at_alter_cartitem_equipment_and_more.py  0026_cart_created_at_alter_cartitem_equipment_and_more.py  0027_alter_equipment_status.py  0028_remove_equipment_brand_remove_equipment_status.py  0029_rename_image_equipment_cover.py  0030_alter_equipment_cover.py  (+2 more)
config/: settings.py  urls.py
scripts/: set_my_ip.py
uploader/: views.py
user/: admin.py  models.py  router.py  serializers.py  views.py
utils/: files.py
(+35 files in other folders)
